<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/yellowbar_height"
        android:background="@color/black"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/headcolumnhead"
            android:layout_width="@dimen/listbar_name_w"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:dividerHeight="1dip"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/headpricename"
                android:layout_width="@dimen/listbar_name_w"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/price_name_text"
                android:textColor="@color/white"
                android:textSize="19sp" >
            </TextView>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/more" />
        </RelativeLayout>

        <com.hzwydyj.finace.view.SyncHorizontalScrollView
            android:id="@+id/scrollListHead"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scrollbarSize="0.0sp"
            android:scrollbars="none" >

            <LinearLayout
                android:id="@+id/headcolumnheadmov"
                android:layout_width="885.0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/headlast"
                    style="@style/pricelist_title_text_gg"
                    android:text="@string/price_last" />

                <TextView
                    android:id="@+id/headupdown"
                    style="@style/pricelist_title_text_gg"
                    android:text="@string/price_updown" />

                <TextView
                    android:id="@+id/headupdownrate"
                    style="@style/pricelist_title_text_gg"
                    android:text="@string/price_updownrate" />

                <TextView
                    android:id="@+id/headopen"
                    style="@style/pricelist_title_text_gg"
                    android:text="@string/price_open" />

                <TextView
                    android:id="@+id/headhigh"
                    style="@style/pricelist_title_text_gg"
                    android:text="@string/price_high" />

                <TextView
                    android:id="@+id/headlow"
                    style="@style/pricelist_title_text_gg"
                    android:text="@string/price_low" />

                <TextView
                    android:id="@+id/headclose"
                    style="@style/pricelist_title_text_gg"
                    android:text="@string/price_close" />
            </LinearLayout>
        </com.hzwydyj.finace.view.SyncHorizontalScrollView>
    </LinearLayout>

    <include layout="@layout/merge_pricelist_content" />

</LinearLayout>