<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_h"
        android:background="#0077b7"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <Button
            android:id="@+id/button_find_backbtn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/back_button"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/regiter_find_password"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/searchbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_layout"
        android:background="@drawable/genin_bg"
        android:padding="10dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <LinearLayout
                android:id="@+id/ll_findPhoneNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/regiter_phone_number"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_find_dian_hua"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/login_big_input"
                    android:hint="@string/regiter_input_phone_number"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_find_verification_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_findPhoneNumber"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/regiter_verification_code"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edit_find_verification_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/login_big_input"
                        android:hint="@string/regiter_input_verification_code"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/button_find_verification_code"
                        android:layout_width="110dp"
                        android:layout_height="40dp"
                        android:background="@color/login_button"
                        android:text="@string/regiter_gain_verification_code"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_find_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_find_verification_code"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/regiter_new_password"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_find_pass_word"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/login_big_input"
                    android:hint="@string/regiter_input_new_password"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_new_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_find_password"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/regiter_affirm_password"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_find_mima"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/login_big_input"
                    android:hint="@string/regiter_countersign_password"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_new_password"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_find_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/login_button"
                    android:text="@string/regiter_countersign"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>